samples/_failures_safe/1761042583_7d02d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5535c27a.c: In function ‘main’:
./samples/SAFE/__tmp_5535c27a.c:150:25: error: expected ‘]’ at end of input
  150 |     char input_text[1024
      |                         ^
      |                         ]
./samples/SAFE/__tmp_5535c27a.c:150:5: error: expected declaration or statement at end of input
  150 |     char input_text[1024
      |     ^~~~
